--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,28 @@
+body{
+  margin: 8px 15px 8px 15px; 
+}
 
 h1 {
-  color: #00f;
+  color: red;
   text-align: center;
 }
 
 h2{
   font-style: italic;
-  text-align: center;
 }
 
 p{
+  font-size: 18px;
+  text-align: center;
   font-family: sans-serif;
+  font-weight: bold;
 }
 
 ul{
   font-size: 20px;
   line-height: 30px;
+  margin-top: 0px;
+}
+h4{
+  margin-bottom: 0px;
 }
